--- a/informationSecurityHomework1/informationSecurityHomework1.csproj
+++ b/informationSecurityHomework1/informationSecurityHomework1.csproj
@@ -44,16 +44,61 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DES.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DES.Designer.cs">
+      <DependentUpon>DES.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MD5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MD5.Designer.cs">
+      <DependentUpon>MD5.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Receive.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Receive.Designer.cs">
+      <DependentUpon>Receive.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RSA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RSA.Designer.cs">
+      <DependentUpon>RSA.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Sender.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Sender.Designer.cs">
+      <DependentUpon>Sender.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="DES.resx">
+      <DependentUpon>DES.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MD5.resx">
+      <DependentUpon>MD5.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -64,6 +109,15 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Receive.resx">
+      <DependentUpon>Receive.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RSA.resx">
+      <DependentUpon>RSA.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Sender.resx">
+      <DependentUpon>Sender.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
